# symfoniya

./: .eslintrc.json  .gitignore  LICENSE  README.md  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: lint-js.yml  lint-rs.yml  release.yml
app/: globals.css  gradient.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs  player.rs  sql_requests.rs
src-tauri/src/api/: audio.rs  mod.rs  player.rs  playlist.rs  utils.rs
src-tauri/src/db/: database.rs  mod.rs  sql_requests.rs  state.rs
src-tauri/src/db/requests/: delete.rs  insert.rs  schema.rs  select.rs
src-tauri/src/music/: async_process.rs  audio.rs  mod.rs  player.rs  ytdlp_wrapper.rs
src-tauri/src/player/: audio.rs
src/components/: AddMusic.tsx  AppContext.tsx  Combobox.tsx  CreatePlaylist.tsx  Layout.tsx  MenubarDemo.tsx  ModeToggle.tsx  MusicCard.tsx  MusicsGrid.tsx  NoSSR.tsx  Notification.tsx  Player.tsx  PlaylistCarousel.tsx  PlaylistCarouselControls.tsx  Search.tsx  Searchbar.tsx  Sidebar.tsx  Test.tsx  Volume.tsx
src/components/contexts_menu/: CPlaylistSub.tsx  MusicCardInfo.tsx
src/components/data/: playlists.tsx
src/components/modals/: AddMusic.tsx  CreatePlaylist.tsx  Search.tsx
src/components/player/: Player.tsx  Volume.tsx
src/components/scene/: Music.tsx  Search.tsx
src/components/search/: Search.tsx  SearchBar.tsx
src/components/types/: audio.tsx  data.tsx  download_audio.tsx  playlist.tsx  schema.ts  tasks.ts
src/components/ui/: CarouselControls.tsx  MusicCard.tsx  badge.tsx  (+35 more)
src/lib/: utils.ts  wheel-controls.ts
src/pages/: _app.tsx  download.tsx  genre.tsx  index.tsx  music.tsx  playlist.tsx
src/styles/: globals.scss
