[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = [ "system-tray", "api-all"] }
rodio = { git = "https://github.com/dvdsk/rodio", branch= "seek_runtime_err", features = ["symphonia-all"] }
symphonia = "0.5.3"
file-format = "0.22.0"
lofty="0.15.0"
thiserror = "1.0.50"
duration-str="0.5.1" 
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8.5"
env_logger = "0.10.0"
log="0.4.20"
lazy_static = "1.4.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
futures = "0.3.29"
youtube_dl = { version = "0.9.0", features = ["tokio", "downloader-native-tls"] }
tokio = { version = "1.20.1", features = ["full"] }
base64 = { version = "0.21.5" }
mpris-server = { version = "0.8.0" }
async-std = { version = "1.12", features = ["attributes", "unstable"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package."*"]
opt-level = 3
